--- a/test1-intersectRayTest/bin/emptyExampleDebug.app/Contents/Info.plist
+++ b/test1-intersectRayTest/bin/emptyExampleDebug.app/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>10J567</string>
+	<string>11C74</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
@@ -21,16 +21,16 @@
 	<key>DTCompiler</key>
 	<string></string>
 	<key>DTPlatformBuild</key>
-	<string>4A304a</string>
+	<string>4D199</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>10J567</string>
+	<string>10K549</string>
 	<key>DTSDKName</key>
-	<string></string>
+	<string>macosx10.6</string>
 	<key>DTXcode</key>
-	<string>0400</string>
+	<string>0420</string>
 	<key>DTXcodeBuild</key>
-	<string>4A304a</string>
+	<string>4D199</string>
 </dict>
 </plist>
