--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,47 @@
+#OS junk files
+[Tt]humbs.db
+*.DS_Store
+
+#Binaries
 build/
 bin/
 obj/
 xcuserdata/
+*.app*
 
+#Visual Studio files
+*.[Oo]bj
+*.user
+*.aps
+*.pch
+*.vspscc
+*.vssscc
+*_i.c
+*_p.c
+*.ncb
+*.suo
+*.tlb
+*.tlh
+*.bak
+*.[Cc]ache
+*.ilk
+*.log
+*.lib
+*.sbr
+*.sdf
+*.opensdf
+ipch/
+obj/
+[Bb]in
+[Bb]uild
+[Dd]ebug*/
+[Rr]elease*/
+Ankh.NoLoad
+
+#XCode
 *.depend
 *.layout
 *.mode*v3
 *.pbxuser
-*.app*
-*.DS_*
 *.perspectivev3
 *.xcworkspace
