--- a/MapToolsSL/CodeBlocks/MapToolsSL.cbp
+++ b/MapToolsSL/CodeBlocks/MapToolsSL.cbp
@@ -71,8 +71,11 @@
 					<Add library="libPocoNetmt" />
 					<Add library="libPocoUtilmt" />
 					<Add library="libPocoXMLmt" />
+					<Add library="libglut" />
+					
 					<Add directory="..\..\..\..\libs\openFrameworksCompiled\lib\win_cb" />
 					<Add directory="..\..\..\..\libs\poco\lib\win_cb" />
+					<Add directory="..\..\..\..\libs\glut\lib\win_cb" />
 				</Linker>
 			</Target>
 			<Target title="Release">
